--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,9 @@ SET(CMAKE_VERBOSE_MAKEFILE FALSE)
 
 PROJECT (libhls)
 
-ADD_SUBDIRECTORY(src)
 INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
+
+ADD_SUBDIRECTORY(test)
+ADD_SUBDIRECTORY(src)
+
+
